[Fixes #40068025] Wyswietlanie wpisow z konkretnej ksiazki

--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -1,62 +1,4 @@
 <h1>Książka finansowa: wpływy / wydatki</h1>
 
-<table>
-  <thead>
+<h2>Ta strona chyba nie ma już sensu - tabelka przeniesiona do konkretnych książek</h2>
 
-    <tr>
-      <th rowspan="2">Lp.</th>
-      <th rowspan="2">Data</th>
-      <th rowspan="2">Treść</th>
-      <th colspan="<%= Category.all.select{ |c| !c.is_expense}.count %>">Wpływy szczegółowo</th>
-      <th rowspan="2">Wpływy razem</th>
-      <th rowspan="2">Wydatki razem</th>
-      <th colspan="<%= Category.all.select{ |c| c.is_expense}.count %>">Wydatki szczegółowo</th>
-      <th rowspan="3" colspan="3">Akcja</th>
-    </tr>
-
-    <tr>
-      <% @categories.each do |category| %>
-        <% if category.is_expense == false %>
-          <th><%= category.name %></th>
-        <% end %>
-      <% end %>
-      <% @categories.each do |category| %>
-        <% if category.is_expense == true %>
-          <th><%= category.name %></th>
-        <% end %>
-      <% end %>
-    </tr>
-  </thead>
-
-
-<% @entries.each do |entry| %>
-  <tr class="node <%= cycle("even", "odd") -%>">
-    <td>lp</td>
-    <td><%= entry.date %></td>
-    <td><%= entry.name %><br/><%= entry.document_number %></td>
-
-    <% @categories.each do |category| %>
-      <% if category.is_expense == false %>
-        <td><%= entry.get_amount_for_category(category.id) %></td>
-      <% end %>
-    <% end %>
-
-    <td><%= entry.income_sum %></td>
-    <td><%= entry.expense_sum %></td>
-
-    <% @categories.each do |category| %>
-      <% if category.is_expense == true %>
-        <td><%= entry.get_amount_for_category(category.id) %></td>
-      <% end %>
-    <% end %>
-
-    <td><%= link_to 'Pokaż', entry %></td>
-    <td><%= link_to 'Edytuj', edit_entry_path(entry) %></td>
-    <td><%= link_to 'Usuń', entry, confirm: 'Na pewno usunąć wpis?', method: :delete %></td>
-  </tr>
-<% end %>
-</table>
-
-<br />
-
-<%= link_to 'Nowy wpis', new_entry_path %>
