--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -13,7 +13,11 @@
 
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.text_field :email %>
+    <%= f.text_field :email, 'disabled' => 'true' %>
+  </div>
+  <div class="field">
+    <%= f.label :is_superadmin %><br />
+    <%= f.check_box :is_superadmin %>
   </div>
   <div class="actions">
     <%= f.submit %>
