--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,5 @@
 <h1>Użytkownik <%= @user.email %></h1>
 <p>Adres e-mail: <%= @user.email if @user.email %></p>
+<p>Superadmin: <%= @user.is_superadmin %>
 <!--%= debug @user %-->
 <p><%= link_to "Powrót", users_path %></p>
