Dodanie nowego gema CanCan. Użytkownik bez uprawnień do zarządzania użytkownikami nie może tego robić nawet jak z palca wpisze adres URL.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 | <%= link_to "Kategorie", categories_path %>
 | <%= link_to "Książki", journals_path %> 
 | <%= link_to "Rodzaje książek", journal_types_path %>
-<% if user_signed_in? && current_user.is_superadmin %>
+<% if can? :read, User %>
 | <%= link_to "Użytkownicy", users_path %>
 <% end %>
 <% if user_signed_in? %>
