--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -17,8 +17,10 @@ table.users tr.invited td { color: #aaa; }
     <td><%= I18n.t(user.status) %></td>
     <td><%= user.is_superadmin ? "TAK" : "nie" %></td>
     <td><%= link_to 'Pokaż', user %></td>
-    <% if current_user.is_superadmin %>
+    <% if can? :update, User %>
       <td><%= link_to 'Edytuj', edit_user_path(user) %></td>
+    <% end %>
+    <% if can? :destroy, User %>
       <td><%= link_to 'Usuń', user, confirm: 'Na pewno usunąć użytkownika?', method: :delete %></td>
     <% end %>
   </tr>
@@ -27,6 +29,6 @@ table.users tr.invited td { color: #aaa; }
 
 <br />
 
-<% if current_user.is_superadmin %>
+<% if can? :create, User %>
 <%= link_to "Nowy użytkownik", new_user_invitation_path, :accesskey => 'N' %>
 <% end %>
