Można tworzyć grupy drużyn oraz przypisywać je (grupy jak również same drużyny) do użytkowników.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
 | <%= link_to "Książka finansowa", entries_path %>
 | <%= link_to "Ksiażka inwentarzowa", inventory_entries_path %>
 | <%= link_to "Drużyny", units_path %>
+| <%= link_to "Grupy", groups_path %>
 | <%= link_to "Kategorie", categories_path %>
 | <%= link_to "Książki", journals_path %> 
 | <%= link_to "Rodzaje książek", journal_types_path %>
