--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Pokaż', @user %> |
-<%= link_to 'Wstecz', users_path %>
+<%= link_to 'Anuluj', @user %> |
+<%= link_to 'Lista', users_path %>
