--- a/app/views/units/_form.html.erb
+++ b/app/views/units/_form.html.erb
@@ -15,6 +15,17 @@
     <%= f.label :nazwa %><br />
     <%= f.text_field :name %>
   </div>
+  
+  <div class="field">
+    <%= f.label :group_ids %>
+    <%= f.select :group_ids, Group.all.collect { |g| [ g.name, g.id ] }, {}, :multiple => true %>
+  </div>
+
+  <div class="field">
+    <%= f.label :user_ids %>
+    <%= f.select :user_ids, User.all.collect { |u| [ u.email, u.id ] }, {}, :multiple => true %>
+  </div>
+  
   <div class="actions">
     <%= f.submit "Zapisz"%>
   </div>
