Kategoria musi mieć określony rok

--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -16,6 +16,10 @@
     <%= f.text_field :name %>
   </div>
   <div class="field">
+    <%= f.label :year %><br />
+    <%= f.text_field :year %>
+  </div>
+  <div class="field">
     <%= f.label :is_expense %><br />
     <%= f.check_box :is_expense %>
   </div>
