Usunięcie strony wyświetlacej wszystkie wpisy
Widok pokazujący wszystkie wpisy bez podziału na książki nie ma sensu; strona i odwołania do niej usunięte.

--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -25,4 +25,4 @@
 
 
 <%= link_to 'Edytuj', edit_entry_path(@entry) %> |
-<%= link_to 'Wstecz', entries_path %>
+<%= link_to 'Wstecz', journal_path(@entry.journal) %>
