Zapraszając (tworząc) nowego użytkownika można określić więcej niż tylko jego adres email (np. przypisanie do drużyn i grup).

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.text_field :email, 'disabled' => 'true' %>
+    <%= f.text_field :email, 'disabled' => !@user.id.nil? %>
   </div>
   
   <div class="field">
