--- a/app/assets/stylesheets/journals.css.scss
+++ b/app/assets/stylesheets/journals.css.scss
@@ -1,3 +1,6 @@
 // Place all the styles related to the Journals controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.balance-label{
+  text-align: right;
+}
