--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,53 +1,27 @@
 <h1>Kategorie</h1>
 
-<%= link_to 'Pokaż wszystkie kategorie', categories_path %><br/>
-<br/>
-
 <form method="GET">
   <%= select_tag "year", options_for_select(@years, @year) %>
-  <% is_expense = I18n.t('category.is_expense') %>
-  <% is_income = I18n.t('category.is_income') %>
-  <%= select_tag "is_expense", options_for_select([[is_expense, true], [is_income, false]], @is_expense) %>
   <%= submit_tag I18n.t('search') %>
 </form>
 
-<% if @year and @is_expense %>
-  <% filtered_categories = Category.find_by_year_and_type(@year, @is_expense == "true") %>
-<% else %>
-  <% filtered_categories = Category.all %>
-<% end %>
+<br/>
 
-<% if @year and @is_expense %>
-  <ul id="categories">
-  <% filtered_categories.each do |category| %>
+<% expenses = {:label => I18n.t(:expenses), :data => Category.find_by_year_and_type(@year, true)} %>
+<% incomes = {:label => I18n.t(:incomes), :data => Category.find_by_year_and_type(@year, false)} %>
+
+<% [expenses, incomes].each do |categories| %>
+<div>
+  <%= categories[:label] %>
+  <ul class="categories">
+  <% categories[:data].each do |category| %>
     <li id="category_<%= category.id %>">
       <span class="handle">[drag] </span><%= category.name %>
     </li>
   <% end %>
   </ul>
+</div>
 <% end %>
-
-<table>
-  <tr>
-    <th>Nazwa</th>
-    <th>Wydatek?</th>
-    <th>Rok</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% filtered_categories.each do |category| %>
-  <tr>
-    <td><%= category.name %></td>
-    <td><%= category.is_expense %></td>
-    <td><%= category.year %></td>
-    <td><%= link_to 'Pokaż', category %></td>
-    <td><%= link_to 'Edytuj', edit_category_path(category) %></td>
-    <td><%= link_to 'Usuń', category, confirm: 'Na pewno usunąć kategorię?', method: :delete %></td>
-  </tr>
-<% end %>
-</table>
 
 <br />
 
