--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,28 +9,9 @@
 <body>
 <div class="container">
 
-| <%= link_to "ZiHeR 2.0", root_path %>
-<% JournalType.all.each do |journal_type| %>
-  <% journal = Journal.find_current_for_type(journal_type) %>
-  <% if journal %>
-  | <%= link_to journal_type.name, journal_path(Journal.find_current_for_type(journal_type)) %>
-  <% end %>
-<% end %>
-| <%= link_to "Ksiażka inwentarzowa", inventory_entries_path %>
-| <%= link_to "Drużyny", units_path %>
-| <%= link_to "Grupy", groups_path %>
-| <%= link_to "Kategorie", categories_path %>
-| <%= link_to "Książki", journals_path %> 
-| <%= link_to "Rodzaje książek", journal_types_path %>
-<% if can? :read, User %>
-| <%= link_to "Użytkownicy", users_path %>
-<% end %>
-<% if user_signed_in? %>
-| <%= current_user.email %> <%= link_to "Wyloguj się", destroy_user_session_path, :method => :delete %>
-<% end %>
+<%= render "layouts/menu" %>
 
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
+<%= render "layouts/messages" %>
 
 <%= yield %>
 
