--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -3,14 +3,8 @@
     <ul class="nav nav-pills">
       <li class=""><%= link_to root_path do %> <i class='icon-home'></i> ZiHeR <% end %></li>
 
-      <% JournalType.all.each do |journal_type| %>
-        <% journal = Journal.find_current_for_type(journal_type) %>
-        <% if journal %>
-          <li class="<%= 'active' if current_page?(journal_path(Journal.find_current_for_type(journal_type))) %>">
-            <%= link_to journal_type.name, journal_path(Journal.find_current_for_type(journal_type)) %>
-          </li>
-        <% end %>
-      <% end %>
+      <li class=""><%= link_to "Książka finansowa", default_finance_journal_path %></li>
+      <li class=""><%= link_to "Książka bankowa", default_bank_journal_path %></li>
 
       <li class="<%= 'active' if current_page?(inventory_entries_path) %>"> <%= link_to "Książka inwentarzowa", inventory_entries_path %> </li>
       <li class="dropdown">
