--- a/app/views/journals/show.html.erb
+++ b/app/views/journals/show.html.erb
@@ -1,3 +1,23 @@
+<% content_for :journal_select do  %>
+  <script type="text/javascript">
+   function selectedUnitChanged(unitId) {
+     document.location.href = "<%= journals_path %>?unit_id=" + unitId.toString() + "&journal_type_id=<%= @journal.journal_type.id %>&year=<%= @journal.year %>";
+   }
+   function selectedYearChanged(journalId) {
+     document.location.href = "<%= journals_path %>/" + journalId;
+   }
+  </script>
+  <select onchange="selectedUnitChanged(this.value)">
+    <% @user_units.each do |unit| %>
+      <option value="<%= unit.id %>" <%= unit.id == @journal.unit.id ? "selected='selected'" : "" %>><%= unit.name %></option>
+    <% end %>
+  </select>
+  <select onchange="selectedYearChanged(this.value)">
+    <% @years.each do |journal| %>
+      <option value="<%= journal.id %>" <%= journal.year == @journal.year ? "selected='selected'" : "" %>><%= journal.year %></option>
+    <% end %>
+  </select>
+<% end %>
 <h1><%=@journal.journal_type.name%>, <%=@journal.year%></h1>
 
 <table>
