Podświetlanie krzyżowe we wpisach

--- a/app/assets/stylesheets/entries.css.scss
+++ b/app/assets/stylesheets/entries.css.scss
@@ -2,17 +2,21 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+/*
 .odd{
   background-color:#cccccc;
 }
 .even{
   background-color:#ffffff;
 }
-.node:hover{
-  background-color:#dddddd;
+*/
+
+.hover{
+  background-color:#f5f5f5;
 }
 
 
+/*
 table { 
   border: 1px solid;
   border-collapse: collapse;
@@ -23,3 +27,4 @@ th {
 td {
   border: 1px solid;
 }
+*/
