Superadmin ma dostęp do wszystkich jednostek.

--- a/app/views/journals/show.html.erb
+++ b/app/views/journals/show.html.erb
@@ -18,7 +18,7 @@
     <% end %>
   </select>
 <% end %>
-<h1><%=@journal.journal_type.name%>, <%=@journal.year%></h1>
+<h1><%=@journal.journal_type.name%> dla <%= @journal.unit.name %>, <%=@journal.year%></h1>
 
 <table class="table table-bordered table-condensed">
 
