--- a/app/views/entries/_form.html.erb
+++ b/app/views/entries/_form.html.erb
@@ -11,29 +11,51 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :data %>
-    <%= f.text_field :date %>
-  </div>
-  <div class="field">
-    <%= f.label :Treść %>
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :Numer_dokumentu %>
-    <%= f.text_field :document_number %>
-  </div>
+  <div class="row">
+    <div class="span6">
+      <div class="field">
+        <%= f.label :data %>
+        <%= f.text_field :date %>
+      </div>
+      <div class="field">
+        <%= f.label :Treść %>
+        <%= f.text_field :name %>
+      </div>
+      <div class="field">
+        <%= f.label :Numer_dokumentu %>
+        <%= f.text_field :document_number %>
+      </div>
 
-  <%= f.fields_for :items do |item_fields| %>
-    <% category_name = item_fields.object.category.name %>
-    <%= item_fields.label :amount, category_name %>
-    <%= item_fields.text_field :amount, :class=>"category" %>
-    <%= item_fields.hidden_field :category_id, :class=>"category_id"%>
-    <br/>
-  <% end %>
+      <%= f.fields_for :items do |item_fields| %>
+        <% category_name = item_fields.object.category.name %>
+        <%= item_fields.label :amount, category_name %>
+        <%= item_fields.text_field :amount, :class=>"category" %>
+        <%= item_fields.hidden_field :category_id, :class=>"category_id"%>
+        <br/>
+      <% end %>
 
-  <%= f.hidden_field :journal_id, :value => @journal.id %>
-  <%= f.hidden_field :is_expense, :value => @entry.is_expense %>
+      <%= f.hidden_field :journal_id, :value => @journal.id %>
+      <%= f.hidden_field :is_expense, :value => @entry.is_expense %>
+    </div>
+
+    <div class="span6">
+    <!%-- TODO: ten input ma byc tagiem do entry.is_transfer --%>
+      <input type="checkbox" id="is_transfer" onchange="transferChanged(this)"/>
+      <label for="is_transfer">Przenieś do innej książki</label>
+      <% @other_journals = Journal.all %><!%-- TODO: ktore ksiazki powinny sie tu pokazywac --%>
+      <%= select_tag "journals", options_from_collection_for_select(@other_journals, "id", "journal_type"), :onchange => 'journalChanged()', :style => "display: none" %>
+
+      <% @other_journals.each do |journal| %>
+        <% @categories = Category.find_by_year_and_type(journal.year, !@entry.is_expense) %>
+        <div class="journal-categories" id="journal-<%=journal.id%>" style="display:none">
+          <% @categories.each do |category| %>
+            <%= category.name %> <input type="text"><br/>
+          <% end %>
+          <br/><br/>
+        </div>
+      <% end %>
+    </div>
+  </div>
 
   <div class="actions">
     <%= f.submit "Zapisz"%>
