--- a/app/views/journals/show.html.erb
+++ b/app/views/journals/show.html.erb
@@ -31,22 +31,22 @@
     </tr>
 
     <tr>
-      <th rowspan="2">#</th>
-      <th rowspan="2">Data</th>
-      <th rowspan="2">Treść</th>
-      <th colspan="<%= @categories_income.count %>">Wpływy szczegółowo</th>
-      <th rowspan="2">Wpływy razem</th>
-      <th rowspan="2">Wydatki razem</th>
-      <th colspan="<%= @categories_expense.count %>">Wydatki szczegółowo</th>
+      <th rowspan="2" class="valign_middle">#</th>
+      <th rowspan="2" class="valign_middle text-center">Data</th>
+      <th rowspan="2" class="valign_middle text-center">Treść</th>
+      <th colspan="<%= @categories_income.count %>" class="text-center">Wpływy szczegółowo</th>
+      <th rowspan="2" class="income_all valign_middle">Wpływy razem</th>
+      <th rowspan="2" class="expense_all valign_middle">Wydatki razem</th>
+      <th colspan="<%= @categories_expense.count %>" class="text-center">Wydatki szczegółowo</th>
       <th rowspan="3" colspan="3">Akcja</th>
     </tr>
 
     <tr>
       <% @categories_income.each do |category| %>
-        <th class="income_<%= category.id %>"><%= category.name %></th>
+        <th class="income_<%= category.id %>"><small><%= category.name %></small></th>
       <% end %>
       <% @categories_expense.each do |category| %>
-        <th class="expense_<%= category.id %>"><%= category.name %></th>
+        <th class="expense_<%= category.id %>"><small><%= category.name %></small></th>
       <% end %>
     </tr>
   </thead>
@@ -61,20 +61,20 @@
       <td><%= entry.name %><br/><%= entry.document_number %></td>
 
       <% @categories_income.each do |category| %>
-        <td class="income_<%= category.id %>"><%= entry.get_amount_for_category(category.id) %></td>
+        <td class="income_<%= category.id %> text-right"><%= entry.get_formatted_amount_for_category(category.id) %></td>
       <% end %>
 
-      <td><%= entry.is_expense ? 0 : entry.sum %></td>
+      <td class="income_all text-right"><%= entry.is_expense ? "-" : entry.sum %></td>
 
-      <td><%= entry.is_expense ? entry.sum : 0 %></td>
+      <td class="expense_all text-right"><%= entry.is_expense ? entry.sum : "-" %></td>
 
       <% @categories_expense.each do |category| %>
-        <td class="expense_<%= category.id %>"><%= entry.get_amount_for_category(category.id) %></td>
+        <td class="expense_<%= category.id %> text-right"><%= entry.get_formatted_amount_for_category(category.id) %></td>
       <% end %>
 
       <td><%= link_to 'Pokaż', entry %></td>
-      <td><%= link_to 'Edytuj', edit_entry_path(entry) %></td>
-      <td><%= link_to 'Usuń', entry, confirm: 'Na pewno usunąć wpis?', method: :delete %></td>
+      <td><%= link_to edit_entry_path(entry) do%><i class="icon-pencil"></i> Edytuj<%end%></td>
+      <td><%= link_to entry, confirm: 'Na pewno usunąć wpis?', method: :delete do%><i class="icon-trash"></i> Usuń<%end%></td>
     </tr>
   <% end %>
   </tbody>
@@ -84,14 +84,14 @@
     <tr>
       <td colspan="3">Suma</td>
       <% @categories_income.each do |category| %>
-        <td class="income_<%= category.id %>"><%= @journal.get_sum_for_category(category) %></td>
+        <td class="income_<%= category.id %> text-right" text-right><%= @journal.get_sum_for_category(category) %></td>
       <% end %>
 
-      <td><%= @journal.get_income_sum %></td>
-      <td><%= @journal.get_expense_sum %></td>
+      <td class="income_all text-right"><%= @journal.get_income_sum %></td>
+      <td class="expense_all text-right"><%= @journal.get_expense_sum %></td>
 
       <% @categories_expense.each do |category| %>
-        <td class="expense_<%= category.id %>"><%= @journal.get_sum_for_category(category) %></td>
+        <td class="expense_<%= category.id %> text-right"><%= @journal.get_sum_for_category(category) %></td>
       <% end %>
       <td colspan="3"></td>
     </tr>
