--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,20 +17,30 @@
 
 <p>
   <b>Przypisane grupy:</b><br/>
-  <% if @user.groups.each do |g| %>
-    <%= g.name %><br />
-  <% end.empty? %>
-    Brak przypisanych grup
+  <table>
+  <% if !@user.user_group_associations.empty? %>
+  	<tr><th>Grupa</th><th>Przeglądanie książki</th><th>Edycja książki</th><th>Zamykanie książki</th><th>Zarządzanie użytkownikami</th><th>Zarządzanie jednostkami</th></tr>
   <% end %>
+  <% if @user.user_group_associations.sort {|uga1, uga2| uga1.group.name <=> uga2.group.name }.each do |uga| %>
+    <tr><td><%= uga.group.name %></td><td><%= uga.can_view_entries %></td><td><%= uga.can_manage_entries %></td><td><%= uga.can_close_journals %></td><td><%= uga.can_manage_users %></td><td><%= uga.can_manage_units %></td><td><%= link_to 'Edytuj', edit_user_group_association_path(uga) %> <%= link_to 'Usuń', uga, confirm: 'Na pewno usunąć powiązanie?', method: :delete %></td></tr>
+  <% end.empty? %>
+    <tr><td colspan="6">Brak przypisanych grup</td></tr>
+  <% end %>
+  </table>
 </p>
 
 <p>
   <b>Przypisane drużyny:</b><br/>
-  <% if @user.units.each do |u| %>
-    <%= u.name %><br />
-  <% end.empty? %>
-    Brak przypisanych drużyn
+  <table>
+  <% if !@user.user_unit_associations.empty? %>
+  	<tr><th>Drużyna</th><th>Przeglądanie książki</th><th>Edycja książki</th><th>Zamykanie książki</th><th>Zarządzanie użytkownikami</th></tr>
   <% end %>
+  <% if @user.user_unit_associations.sort {|uua1, uua2| uua1.unit.name <=> uua2.unit.name }.each do |uua| %>
+    <tr><td><%= uua.unit.name %></td><td><%= uua.can_view_entries %></td><td><%= uua.can_manage_entries %></td><td><%= uua.can_close_journals %></td><td><%= uua.can_manage_users %></td><td><%= link_to 'Edytuj', edit_user_unit_association_path(uua) %> <%= link_to 'Usuń', uua, confirm: 'Na pewno usunąć powiązanie?', method: :delete %></td>
+  <% end.empty? %>
+    <tr><td colspan="5">Brak przypisanych drużyn</td></tr>
+  <% end %>
+  </table>
 </p>
 
 <!--%= debug @user %-->
